# Synapse

./: .gitignore  CMakeLists.txt  test_audio.raw  test_music.py  vcpkg.json
include/: AudioHandler.h  CameraHandler.h  NetworkHandler.h
python/: lib_check.py  play.py  reciever.py  requirements.txt  stt_engine.py
python/engine/: events.py  llm_engine.py  logger.py  logging_demo.py  main (2).py  main.py  music_engine.py  stt_engine.py  tts_engine.py  vision_pro.db  vision_pro.py  weather_system.py
python/tts_testing/: edge_tts_test.py
src/: CameraHandler.cpp  NetworkHandler.cpp  main.cpp
